# ZebrandsBackendTechnicalTest

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: cicd.yml  test.yml
IAC/: .terraform.lock.hcl  do_domains.tf  do_kubernetes_clusters.tf  do_records.tf  helm_releases.tf  kubernetes_resources_zebrands.tf  providers.tf  variables.tf  versions.tf
src/: asgi.py
src/alembic/: env.py
src/alembic/versions/: 2023-11-30_add_products.py  2023-11-30_add_user_model.py  2023-11-30_first_migration.py  (+1 more)
src/configs/: application.py  email.py  postgresql.py  settings_config.py
src/dependencies/: anonymous_user_cookie.py  api_key.py  db_session.py  is_o2auth_authenticate.py  o2auth.py  product_change_notification.py  register_product_trace.py
src/exceptions/: authentication_failed.py
src/forms/: login_form.py  product_forms.py  user_forms.py
src/handlers/: integrity_error.py  no_result_found_error.py
src/models/: __init__.py  anonymous_product_trace.py  base.py  products.py  users.py
src/querys/: pagination.py  product_query.py  user_query.py
src/routes/: auth_routes.py  base_routes.py  product_routes.py  user_routes.py
src/services/: base_service.py  product_service.py  user_service.py
src/shemas/: base_schema.py  o2auth_schema.py  product_schema.py  user_schema.py
test/: conftest.py
test/dependencies/: o2auth.py
test/factories/: product.py  user.py
tests/: conftest.py
tests/api/: conftest.py
tests/dependencies/: get_db.py
tests/factories/: product.py
(+6 files in other folders)
