[tool.poetry]
name = "ZebrandsBackendTechnicalTest"
version = "0.1.0"
description = ""
authors = ["Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
