[tool.poetry]
name = "ZebrandsBackendTechnicalTest"
version = "0.1.0"
description = ""
authors = ["Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
email-validator = "^2.1.0.post1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
user-agents = "^2.2.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
factory-boy = "^3.3.0"


[tool.poetry.group.tools.dependencies]
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
